--- a/infrastructure-build-plans/ubuntu-mysql5.6-jdk7-is-single-node.yaml
+++ b/infrastructure-build-plans/ubuntu-mysql5.6-jdk7-is-single-node.yaml
@@ -40,6 +40,7 @@ wso2.testgrid.infrastructure:
        DBEngine: *databaseEngine
        DBEngineVersion: *databaseVersion 
        JDK: *jdk
+       DBPassword: "DB_Password"
        EC2KeyPair: "testgrid-key"
        ALBCertificateARN: "arn:aws:acm:us-east-1:809489900555:certificate/2ab5aded-5df1-4549-9f7e-91639ff6634e"
 
