--- a/infrastructure-build-plans/ubuntu-mysql5.6-jdk7-is-single-node.yaml
+++ b/infrastructure-build-plans/ubuntu-mysql5.6-jdk7-is-single-node.yaml
@@ -33,14 +33,14 @@ wso2.testgrid.infrastructure:
   scripts:
     -
      scriptType: "CLOUD_FORMATION"
-     filePath: "pattern-1-with-puppet-cloudformation.template.yml"
+     filePath: "wso2-is-with-alb-cf-template.yml"
      name: "wso2-is-public-branch"
      scriptParameters:
        CloudFormationParameterFile: "wso2-is-with-alb-cf-template-parameters.json"
        DBEngine: *databaseEngine
        DBEngineVersion: *databaseVersion 
        JDK: *jdk
-       DBPassword: "DB_Password"
+       WUMUsername: "WUM_USERNAME"
+       WUMPassword: "WUM_PASSWORD"
        EC2KeyPair: "testgrid-key"
        ALBCertificateARN: "arn:aws:acm:us-east-1:809489900555:certificate/2ab5aded-5df1-4549-9f7e-91639ff6634e"
-
