--- a/infrastructure-build-plans/ubuntu-mysql5.6-jdk8-is-two-node.yaml
+++ b/infrastructure-build-plans/ubuntu-mysql5.6-jdk8-is-two-node.yaml
@@ -19,7 +19,7 @@ wso2.testgrid.infrastructure:
   providerType: "AWS"
   clusterType: "None"
   instanceType: "EC2"
-  name: "single-node"
+  name: "two-node"
   operatingSystem:
     name: "Ubuntu"
     version: "17.04"
