--- a/infrastructure-build-plans/ubuntu-mysql5.6-jdk8-is-two-node.yaml
+++ b/infrastructure-build-plans/ubuntu-mysql5.6-jdk8-is-two-node.yaml
@@ -16,32 +16,34 @@
 
 # TestGrid Infrastructure Configuration Parameters
 wso2.testgrid.infrastructure:
-  providerType: "AWS"
-  clusterType: "None"
-  instanceType: "EC2"
-  name: "two-node"
-  operatingSystem:
-    name: "Ubuntu"
-    version: "17.04"
-  database:
-    engine: &databaseEngine "MYSQL"
-    version: &databaseVersion "5.6"
-  jdk: &jdk "JDK8"
-  securityProperties:
-    apiKey: "242424"
-    sshKey: "abc.key"
-  scripts:
-    -
-     scriptType: "CLOUD_FORMATION"
-     filePath: "pattern-2-with-puppet-cloudformation.template.yml"
-     name: "wso2-is-public-branch"
-     scriptParameters:
-       DBEngine: *databaseEngine
-       DBEngineVersion: *databaseVersion 
-       JDK: *jdk
-       AWSAccessKeyId: "AWS_ACCESS_KEY_ID"
-       AWSAccessKeySecret: "AWS_SECRET_ACCESS_KEY"
-       DBPassword: "DB_Password"
-       EC2KeyPair: "testgrid-key"
-       ALBCertificateARN: "arn:aws:acm:us-east-1:809489900555:certificate/2ab5aded-5df1-4549-9f7e-91639ff6634e"
-
+ providerType: "AWS"
+ clusterType: "None"
+ instanceType: "EC2"
+ name: "two-node"
+ operatingSystem:
+   name: "Ubuntu"
+   version: "17.04"
+ database:
+   engine: &databaseEngine "MYSQL"
+   version: &databaseVersion "5.7"
+ jdk: &jdk "JDK8"
+ securityProperties:
+   apiKey: "242424"
+   sshKey: "abc.key"
+ scripts:
+   -
+    scriptType: "CLOUD_FORMATION"
+    filePath: "pattern-2-with-puppet-cloudformation.template.yml"
+    name: "wso2-is-public-branch"
+    #should be set as environment variables on Jenkins
+    environmentScriptParameters:
+      AWSAccessKeyId: "AWS_ACCESS_KEY_ID"
+      AWSAccessKeySecret: "AWS_SECRET_ACCESS_KEY"
+    scriptParameters:
+      DBEngine: *databaseEngine
+      DBEngineVersion: *databaseVersion 
+      JDK: *jdk
+      DBPassword: "DB_Password"
+      EC2KeyPair: "testgrid-key"
+      ALBCertificateARN: "arn:aws:acm:us-east-1:809489900555:certificate/2ab5aded-5df1-4549-9f7e-91639ff6634e"
+      InstanceType: "m4.large"
