--- a/infrastructure-build-plans/ubuntu-mysql5.6-jdk8-is-two-node.yaml
+++ b/infrastructure-build-plans/ubuntu-mysql5.6-jdk8-is-two-node.yaml
@@ -18,6 +18,7 @@
 wso2.testgrid.infrastructure:
  providerType: "AWS"
  clusterType: "None"
+ instanceType: "EC2"
  name: "two-node"
  operatingSystem:
    name: "Ubuntu"
@@ -45,4 +46,4 @@ wso2.testgrid.infrastructure:
       DBPassword: "DB_Password"
       EC2KeyPair: "testgrid-key"
       ALBCertificateARN: "arn:aws:acm:us-east-1:809489900555:certificate/2ab5aded-5df1-4549-9f7e-91639ff6634e"
-      InstanceType: "m4.large"
+      
