--- a/infrastructure-build-plans/single-node-infra.yaml
+++ b/infrastructure-build-plans/single-node-infra.yaml
@@ -13,26 +13,48 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 ################################################################################
+
 # TestGrid Test Configuration Parameters
-wso2.testgrid.test:
- product:
-   name: "WSO2-IS"
-   version: "5.4.0"
-   channel: "LTS"
- deploymentPattern:
-   gitRepo: "https://github.com/wso2/cloudformation-is"
-   names:
-     -  "cloudformation-templates/pattern-1"
- infraParamsList:
-   - 
-     DBEngine: "mysql"
-     DBEngineVersion:
-       - "5.6.35"
-     JDK:
-       - "ORACLE_JDK8"
- scenario:
-   gitRepo: "https://github.com/wso2-incubator/identity-test-integration"
-   names:
-     -  "solution02"
-     -  "solution21"
-     -  "solution12"
+productName: "WSO2-IS"
+productVersion: "5.4.0"
+channel: "LTS"
+deploymentPatterns:
+    -  "cloudformation-templates/pattern-1"
+    -  "cloudformation-templates/pattern-2"
+infraParams:
+  - osName: "Ubuntu"
+    osVersion:
+      - "15.04"
+      - "16.04"
+    databaseName: "MYSQL"
+    databaseVersion:
+      - "5.5"
+      - "5.7"
+    jdk:
+        - "ORACLE_JDK7"
+        - "ORACLE_JDK8"
+  - osName: "Windows"
+    osVersion: "7"
+    databaseName: "MYSQL"
+    databaseVersion: "5.5"
+    jdk: "ORACLE_JDK7"
+scenarios:
+    -  "solution02"
+    -  "solution03"
+infrastructure:
+  providerType: "AWS"
+  clusterType: "None"
+  instanceType: "EC2"
+  name: "cloudformation-templates/pattern-2"
+  securityProperties:
+    apiKey: "242424"
+    sshKey: "abc.key"
+  scripts:
+    - scriptType: "CLOUD_FORMATION"
+      filePath: "pattern-1-with-puppet-cloudformation.template.yml"
+      name: "wso2-is-public-branch"
+      environmentScriptParameters:
+      scriptParameters:
+        DBPassword: "DB_Password"
+        EC2KeyPair: "testgrid-key"
+        ALBCertificateARN: "arn:aws:acm:us-east-1:809489900555:certificate/2ab5aded-5df1-4549-9f7e-91639ff6634e"
