--- a/infrastructure-build-plans/single-node-infra.yaml
+++ b/infrastructure-build-plans/single-node-infra.yaml
@@ -20,27 +20,16 @@ productVersion: "5.4.0"
 channel: "LTS"
 deploymentPatterns:
     -  "cloudformation-templates/pattern-1"
-    -  "cloudformation-templates/pattern-2"
 infraParams:
-  - osName: "Ubuntu"
-    osVersion:
-      - "15.04"
-      - "16.04"
-    databaseName: "MYSQL"
+  - databaseName: "mysql"
     databaseVersion:
-      - "5.5"
-      - "5.7"
+      - "5.6.35"
     jdk:
-        - "ORACLE_JDK7"
         - "ORACLE_JDK8"
-  - osName: "Windows"
-    osVersion: "7"
-    databaseName: "MYSQL"
-    databaseVersion: "5.5"
-    jdk: "ORACLE_JDK7"
 scenarios:
     -  "solution02"
-    -  "solution03"
+    -  "solution21"
+    -  "solution12"
 infrastructure:
   providerType: "AWS"
   clusterType: "None"
