Change infra parameter names
 Change infra parameter names as per according to cloud formation scripts

--- a/infrastructure-build-plans/single-node-infra.yaml
+++ b/infrastructure-build-plans/single-node-infra.yaml
@@ -21,10 +21,10 @@ channel: "LTS"
 deploymentPatterns:
     -  "cloudformation-templates/pattern-1"
 infraParams:
-  - databaseName: "mysql"
-    databaseVersion:
+  - DBEngine: "mysql"
+    DBEngineVersion:
       - "5.6.35"
-    jdk:
+    JDK:
         - "ORACLE_JDK8"
 scenarios:
     -  "solution02"
