--- a/infrastructure-build-plans/single-node-infra.yaml
+++ b/infrastructure-build-plans/single-node-infra.yaml
@@ -15,7 +15,7 @@
 ################################################################################
 
 # TestGrid Test Configuration Parameters
-productName: "wso2is5.4.0LTS"
+productName: "wso2is-5.4.0-LTS"
 deploymentPatterns:
     -  "cloudformation-templates/pattern-1"
 infraParams:
