--- a/cloudformation-templates/pattern-1/pattern-1-with-puppet-cloudformation.template.yml
+++ b/cloudformation-templates/pattern-1/pattern-1-with-puppet-cloudformation.template.yml
@@ -60,7 +60,7 @@ Mappings:
 # User inputs
 #############################
 Parameters:
-  JDK:
+  jdk:
     Type: String
     Default: "ORACLE_JDK8"
     Description: Target Java version
