--- a/infrastructure-build-plans/single-node-infra.yaml
+++ b/infrastructure-build-plans/single-node-infra.yaml
@@ -27,6 +27,7 @@ infraParams:
 scenarios:
     -  "scenario02"
     -  "scenario12"
+    -  "scenario18"    
     -  "scenario21"
 infrastructure:
   providerType: "AWS"
